--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,50 @@
-confusable-homoglyphs==3.2.0
-dj-database-url==0.5.0
+backcall==0.1.0
+beautifulsoup4==4.7.1
+bleach==3.1.0
+bs4==0.0.1
+certifi==2018.11.29
+chardet==3.0.4
+colorama==0.4.1
+decorator==4.3.0
+defusedxml==0.5.0
 Django==2.1.5
 django-extensions==2.1.5
-django-registration==3.0
-gunicorn==19.9.0
+entrypoints==0.3
+idna==2.8
+ipykernel==5.1.0
+ipython==7.2.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+jedi==0.13.2
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-client==5.2.4
+jupyter-core==4.4.0
+MarkupSafe==1.1.0
+mistune==0.8.4
+nbconvert==5.4.0
+nbformat==4.4.0
+notebook==5.7.4
+pandocfilters==1.4.2
+parso==0.3.1
+pickleshare==0.7.5
 Pillow==5.4.1
-psycopg2-binary==2.7.7
-pytz==2018.9
+prometheus-client==0.5.0
+prompt-toolkit==2.0.7
+Pygments==2.3.1
+python-dateutil==2.7.5
+pytz==2018.7
+pywinpty==0.5.5
+pyzmq==17.1.2
+requests==2.21.0
+Send2Trash==1.5.0
 six==1.12.0
-whitenoise==4.1.2
+soupsieve==1.7.3
+terminado==0.8.1
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
+urllib3==1.24.1
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
