--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ chardet==3.0.4
 colorama==0.4.1
 decorator==4.3.0
 defusedxml==0.5.0
+dj-database-url==0.5.0
 Django==2.1.5
 django-extensions==2.1.5
 entrypoints==0.3
+gunicorn==19.9.0
 idna==2.8
 ipykernel==5.1.0
 ipython==7.2.0
@@ -31,6 +33,7 @@ pickleshare==0.7.5
 Pillow==5.4.1
 prometheus-client==0.5.0
 prompt-toolkit==2.0.7
+psycopg2-binary==2.7.7
 Pygments==2.3.1
 python-dateutil==2.7.5
 pytz==2018.7
@@ -47,4 +50,5 @@ traitlets==4.3.2
 urllib3==1.24.1
 wcwidth==0.1.7
 webencodings==0.5.1
+whitenoise==4.1.2
 widgetsnbextension==3.4.2
